Fixed speeches text aligns

--- a/src/partials/views/_speeches.sass
+++ b/src/partials/views/_speeches.sass
@@ -243,12 +243,17 @@
 .ts.speeches .group.right .speech .content
     margin-right: $chatroom_messageNoAvatarDistance
     margin-left : 0
+    text-align  : right
 
 /** Author */
 .ts.speeches .speech.right > .author,
 .ts.speeches .group.right .speech > .author
     padding-right: calc((#{$chatroom_avatarSizeCalc}) + #{$chatroom_messageArrowDistance} + #{$chatroom_messageArrowSize})
     text-align   : right
+
+.ts.speeches .speech.right .content > .author,
+.ts.speeches .group.right .speech .content > .author
+    text-align: right
 
 /** Meta */
 .ts.speeches .speech.right > .meta,
@@ -302,6 +307,34 @@
 
 .ts.speeches .speech .content .author.inline + .text
     display: inline
+
+//-------------------//
+//      Reactions
+//-------------------//
+
+.ts.speeches .speech .reactions
+    margin-left: 0
+    margin-top: -8px
+    white-space: nowrap
+    text-align: right
+    justify-content: flex-end
+    width: 100%
+    font-size: .9em
+    padding-right: calc((1.3em + .58em * 2 + 1px * 2) + 6px + 7px)
+
+.ts.speeches .speech .reactions .item
+    white-space: nowrap
+    background: #fff
+    font-size: 1em
+    padding: 1px 6px 0px 3px
+    margin-left: 4px
+    color: #999
+    box-shadow: 0px 1px 2px 0 rgba(0,0,0,0.06)
+    border-radius: 5px
+
+.ts.speeches .speech .reactions .item .count
+    display: inline-block
+    margin-left: .3em
 
 //-------------------//
 //       Sizes
@@ -386,6 +419,10 @@
 //-------------------//
 //      Coupling
 //-------------------//
+
+.ts.speeches .speech .content .ts.quote
+    margin-top: 0
+    display   : inline-block
 
 .ts.speeches .speech .content .ts.secondary.quote
     margin-bottom: $chatroom_quoteMarginBottom
